# expenses-tracker-automation

./: .env.example  .gitignore  .vscode.json  API_DOCUMENTATION.md  DATABASE_DESIGN.md  PYDANTIC_V2_GUIDE.md  README.md  app.py  init_db.py  pyproject.toml  requirements.txt  run.py  setup.sh  socket_app.py  test.py
app/: __init__.py
app/api/: __init__.py  budget_controller.py  category_controller.py  expense_controller.py  health_controller.py  user_controller.py
app/config/: config.py
app/models/: __init__.py  base.py  budget.py  expense.py  role.py  user.py
app/schemas/: budget_schema.py  category_schema.py  expense_schema.py  user_schema.py
app/utils/: responses.py
migrations/versions/: e8d8bf241dcd_initial_migration.py
